--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #database
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/tmall_springboot?characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto=none
 
 #thymeleaf
 spring.thymeleaf.mode=LEGACYHTML5
@@ -13,6 +13,7 @@ spring.thymeleaf.cache=false
 
 #context
 server.context-path=/tmall_springboot
+server.port=8080
 
 #设置上传文件大小，默认只有1 m
 spring.http.multipart.maxFileSize=100Mb
@@ -22,3 +23,6 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 #显示 hibernate运行的 sql 语句
 spring.jpa.show-sql=true
+
+#ElasticSearch
+spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
